@@ -35,6 +35,7 @@ from ..encoders import (
 	dn_list_property_encoder_for, dn_property_encoder_for, Base64BinaryPropertyEncoder, DatePropertyEncoder,
 	DisabledPropertyEncoder, HomePostalAddressPropertyEncoder, SambaLogonHoursPropertyEncoder, StringIntPropertyEncoder,
 )
+from ..exceptions import NoObject
 from .generic import GenericUdm1Module, GenericUdm1Object, GenericUdm1ObjectProperties
 
 
@@ -69,3 +70,6 @@ class UsersUserUdm1Module(GenericUdm1Module):
 	"""UsersUserUdm1Object factory"""
 	_udm_object_class = UsersUserUdm1Object
 	supported_api_versions = (1,)
+
+	def _get_default_positions_property(self):
+		return 'users'
